# fusion-randomiser

./: .gitignore  Cargo.toml  build.rs
src/: data.rs  fast_map.rs  logic.rs  main.rs  util.rs
src/asm/: base.s  cooldowns.s  cost.s  firerates.s  sounds.s  spawns.s  test.s  tutorials.s  tweaks.s
src/il2cppdump/: disasm.rs  mod.rs  pe.rs  util.rs
src/patcher/: mod.rs
src/process/: mod.rs  wine.rs
