[package]
name = "fusion-randomiser"
version = "0.1.0"
edition = "2021"

[dependencies]
iced-x86 = "1.21.0"
object   = "0.36.5"
rand_chacha = "0.9.0"
rand = "0.9.0"
smallvec = "1.13.2"

[target.'cfg(target_os = "linux")'.dependencies]
gettid = "0.1.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version="0.59.0", features=[
    "Wdk",
    "Wdk_System",
    "Wdk_System_SystemInformation",
    "Win32",
    "Win32_System",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_WindowsProgramming",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemInformation",
] }
windows-core = "0.59.0"

[build-dependencies]
cc = "*"

[profile.release]
debug = true

[profile.dev]
opt-level = 1

